--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
     "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-html2js": "^0.2.0",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-rename": "^1.2.2",
+    "gulp-serve": "^1.2.0",
     "gulp-uglify": "^1.4.2"
   },
   "scripts": {
